--- a/src/index.css
+++ b/src/index.css
@@ -50,8 +50,8 @@ body {
   font-style: normal;
 }
 
-.architects-daughter {
-  font-family: "ArchitectsDaughter", sans-serif;
+.aeonik-regular {
+  font-family: "AeonikRegular", sans-serif;
 }
 
 @font-face {
