--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
 
 @font-face {
   font-family: "DelaGothicOne";
-  src: url("./assets/font/DelaGothicOne-Regular.woff2") format("truetype"); /* Adjust path */
+  src: url("./assets/font/DelaGothicOne-Regular.woff2") format("woff2"); /* Adjust path */
   font-weight: normal;
   font-style: normal;
 }
@@ -48,7 +48,7 @@ body {
 @font-face {
   font-family: "AeonikRegular";
   src: url("./assets/font/Aeonik-Regular.133c8d5a0dd65f35129e.woff2")
-    format("truetype"); /* Adjust path */
+    format("woff2"); /* Adjust path */
   font-weight: normal;
   font-style: normal;
 }
@@ -59,7 +59,7 @@ body {
 
 @font-face {
   font-family: "ArchitectsDaughter";
-  src: url("./assets/font/ArchitectsDaughter.woff2") format("truetype"); /* Adjust path */
+  src: url("./assets/font/ArchitectsDaughter.woff2") format("woff2"); /* Adjust path */
   font-weight: normal;
   font-style: normal;
 }
